<resources>
    <string name="app_name">My Contactlist</string>
    <string name="no_contact_available">No Contacts</string>

    <string name="ok">OK</string>
    <string name="no_internet">No internet connection.</string>

    <string name="name">Name:</string>
    <string name="contact_num">Number:</string>
    <string name="email">Email:</string>
    <string name="address">Address</string>
    <string name="company">Company:</string>

    <string name="title_contact_list">Contact List</string>
    <string name="title_contact_detail">Contact Detail</string>



</resources>
