<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.mycontactlist.ui.activity.ContactDetailActivity">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_10dp"
        app:cardCornerRadius="@dimen/dimen_5dp"
        android:layout_gravity="center">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_14sp"
                android:fontFamily="sans-serif-medium"
                />
            <TextView
                android:id="@+id/mTextViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amit Walke"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_18sp"
                android:fontFamily="sans-serif" />
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@android:color/darker_gray"
                />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_num"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_14sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/mTextViewContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amit"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_18sp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@android:color/darker_gray"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_14sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/mTextViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amit"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_18sp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@android:color/darker_gray"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_14sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/mTextViewCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amit"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_18sp"
                android:fontFamily="sans-serif" />
        </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_1dp"
                android:background="@android:color/darker_gray"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:id="@+id/mTextViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Amit"
                android:layout_weight="1"
                android:textSize="@dimen/dimen_16sp"
                android:fontFamily="sans-serif"
                />
        </LinearLayout>
        </LinearLayout>

        </ScrollView>
    </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>
